move files around

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,2 +1,2 @@
-add_executable(testmidas ObservableTests.cpp)
+add_executable(testmidas ObservableTests.cpp WatcherTests.cpp)
 target_link_libraries(testmidas observable gtest_main)
